--- a/text-entry.html
+++ b/text-entry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Latest compiled and minified CSS -->
@@ -64,8 +64,8 @@
 
 		<p>
 			The history of text entry interfaces predates computers (Silfverberg 2007).
-			For example, typewriters like the Jewett No. 4 shown above had to solve the same problem as with computers, but rather than storing the sequence of characters in computer memory, they were stored on a piece of paper with ink.
-			It was during the industrial revolution when the demand for more text increased and devices like typewriters, and their QWERTY keyboard layout, emerged.
+			For example, typewriters like the Jewett No. 4 shown above had to solve the same problem as modern computer keyboards, but rather than storing the sequence of characters in computer memory, they were stored on a piece of paper with ink.
+			Typewriters like the Jewett No. 4 and their QWERTY keyboard layout emerged during the industrial revolution when the demand for text increased.
 		</p>
 			
 		<p>
@@ -87,11 +87,11 @@
 		</p>
 		
 		<p>
-			Keyboards can be as simple as 1-dimensional layouts of characters, navigated with a left, right, and select key. These are common on small devices where physical space is scarce. Multiple versions of the iPod, for example, used 1-dimensional text entry keyboards because of it's one dimensional click wheel.
+			Keyboards can be as simple as 1-dimensional layouts of characters, navigated with a left, right, and select key. These are common on small devices where physical space is scarce. Multiple versions of the iPod, for example, used 1-dimensional text entry keyboards because of its one dimensional click wheel.
 		</p>
 		
 		<p>
-			Two-dimensional keyboards like the familiar QWERTY layout are more common. And layout matters. The original QWERTY layout, for example, was designed to minimize mechanical failure, not speed or accuracy. The Dvorak layout was designed for speed, placing the most common letters in the home row and to maximize alternation between hands (Dvorak and Dealey 1936):
+			Two-dimensional keyboards like the familiar QWERTY layout are more common. And layout matters. The original QWERTY layout, for example, was designed to minimize mechanical failure, not speed or accuracy. The Dvorak layout was designed for speed and it, places the most common letters in the home row and maximizes alternation between hands (Dvorak and Dealey 1936):
 		</p>
 
 		<p>
@@ -109,11 +109,13 @@
 		</p>
 
 		<p>
-			Cell phones in the early 21st century used a <strong>multitap</strong> method in which each key on a numeric keyboard mapped to three or four letters, and to select the letter you wanted, you would press a key multiple times to reach the letter you wanted.
-			After a 1.5 second timeout, the letter would be selected.
+			Cell phones in the early 21st century used a <strong>multitap</strong> method in which each key on a numeric keyboard mapped to three or four letters. 
+			To select the letter you wanted, you would press a key multiple times until the desired letter is displayed.
+			After a 1.5 second timeout (or by holding the button), the letter would be selected.
 			Some researchers sped up multitap techniques like this by using other sensors, such as tilt sensors, making it faster to indicate a character (<a href="https://doi.org/10.1145/964696.964705">Wigdor and Balakrishnan 2003</a>).
 			Other researchers explored even more efficient forms of text entry with minimal keys, including one with only <em>4</em> keys, where characters are uniquely encoded as sequences of presses of those four keys (<a href="https://doi.org/10.1145/2047196.2047258">MacKenzie et al. 2011</a>).
-			On particularly small devices like smartwatches, some researchers have explored having the user move the <em>keyboard</em> to select the character they want (<a href="https://doi.org/10.1145/2984511.2984591">Shibata et al. 2016</a>):
+			On particularly small devices like smartwatches, some researchers have explored having the user move the <em>keyboard</em> to select the character they want (<a href="https://doi.org/10.1145/2984511.2984591">Shibata et al. 2016</a>).
+			Other approaches include portable Bluetooth-connected chording keyboards like the <a href="https://twiddler.tekgear.com/">Twiddler</a>, which can be customized for rapid text entry.
 		</p>
 		
 		<p class="embed-responsive embed-responsive-16by9">
@@ -127,13 +129,13 @@
 			</p>
 		
 		<p>
-			<img src="images/stenotype.jpg" class="img-responsive center-block" alt="An on-screen keyboard on a pager." />
-			<center><em>An on-screen keyboard on a pager.</em></center>
+			<img src="images/stenotype.jpg" class="img-responsive center-block" alt="A user typing on a stenotype device" />
+			<center><em>A stenotype, often used in courtrooms for rapid chorded text entry</em></center>
 		</p>
 
 		<p>
 			With 2-4 years of training, some stenographers can reach 225 words per minute.
-			Researchers have adapted these techniques to other encodings, such as braille, to support non-visual text entry for people who are blind or low-vision (<a href="https://dl.acm.org/citation.cfm?id=2305297">Zenkot et al. 2012</a>:
+			Researchers have adapted these techniques to other encodings, such as braille, to support non-visual text entry for people who are blind or low-vision (<a href="https://dl.acm.org/citation.cfm?id=2305297">Zenkot et al. 2012</a>)
 		</p>
 		
 		<p class="embed-responsive embed-responsive-16by9">
@@ -144,6 +146,7 @@
 		<p>
 			On-screen virtual keyboards like those found in modern smartphones introduce some degree of ambiguity into the notion of a discrete set of keys, because touch input can be ambiguous.
 			Some researchers have leveraged additional sensor data to disambiguate which key is being typed, such as which finger is typically used to type a key (<a href="https://doi.org/10.1145/2807442.2807491">Choi et al. 2015</a>).
+			Other approaches have studied how users conceptualize touch input, allowing for more accurate target acquisition (<a href="https://doi.org/10.1145/1978942.1979308">Holz and Baudisch 2011</a>).
 		</p>
 
 		<h2>Continuous input</h2>
@@ -216,7 +219,7 @@
 		<p>
 			The third major approach to text entry has been predictive input, in which a system simply guesses what a user wants to type based on some initial information.
 			This technique has been used in both discrete and continuous input, and is relatively ubiquitous.
-			For example, before smartphones and their virtual keyboards, most cellphones offered a scheme called T9, which would use a dictionary and word frequencies to predict the most likely word you were trying to type. When it was right, it was quite helpful, but it was frequently wrong.
+			For example, before smartphones and their virtual keyboards, most cellphones offered a scheme called T9, which would use a dictionary and word frequencies to predict the most likely word you were trying to type.
 		</p>
 		
 		<p>
@@ -234,7 +237,7 @@
 			
 		<p>
 			Our brief tour through the history of text entry reveals a few important trends.
-			First, there are <em>many</em> ways to enter text into computers and they all have speed accuracy tradeoffs.
+			First, there are <em>many</em> ways to enter text into computers and they all have speed-accuracy tradeoffs.
 			Second, the vast majority of techniques focus on speed and accuracy, and not on the other experiential factors in text entry, such as comfort or accessibility.
 			As the world continues to age, and computing moves into every context of our lives, text entry will have to adapt to these shifting contexts and abilities.
 		</p>
@@ -258,6 +261,8 @@
 		<p>Daewoong Choi, Hyeonjoong Cho, and Joono Cheong. 2015. <a href="https://doi.org/10.1145/2807442.2807491">Improving Virtual Keyboards When All Finger Positions Are Known</a>. In Proceedings of the 28th Annual ACM Symposium on User Interface Software & Technology (UIST '15). ACM, New York, NY, USA, 529-538.</p>
 
 		<p>Dvorak, A., Merrick, N. L., Dealey, W. L., & Ford, G. C. (1936). Typewriting behavior. New York: American Book Company, 1(6).</p>
+		
+		<p>Christian Holz and Patrick Baudisch. 2011. <a href="https://doi.org/10.1145/1978942.1979308">Understanding touch</a>. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI '11). ACM, New York, NY, USA, 2501-2510.</p>
 
 		<p>Per-Ola Kristensson and Shumin Zhai. 2004. <a href="http://dx.doi.org/10.1145/1029632.1029640">SHARK2: a large vocabulary shorthand writing system for pen-based computers</a>. In Proceedings of the 17th annual ACM symposium on User interface software and technology (UIST '04). ACM, New York, NY, USA, 43-52.</p>
 
