adding links to theory chapter

--- a/theory.html
+++ b/theory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Latest compiled and minified CSS -->
@@ -219,19 +219,19 @@
         
 		<p id="carroll">Carroll, J. M., Anderson, N. S., & National Research Council. (1987). Mental models in human-computer interaction: Research issues about what the user of software knows (No. 12). National Academies.</p>
 
-		<p id="hartson">Hartson, R. (2003). Cognitive, physical, sensory, and functional affordances in interaction design. Behaviour & Information Technology, 22(5), 315-338.</p>
+		<p id="hartson">Hartson, R. (2003). <a href="https://doi.org/10.1080/01449290310001592587">Cognitive, physical, sensory, and functional affordances in interaction design</a>. Behaviour & Information Technology, 22(5), 315-338.</p>
 
-    <p id="gaver">Gaver, W.W. (1991). Technology affordances. Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI '91). New Orleans, Louisiana (April 27-May 2, 1991). New York: ACM Press, pp. 79-84.</p>
+    	<p id="gaver">Gaver, W.W. (1991). <a href="https://doi.org/10.1145/108844.108856">Technology affordances</a>. Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI '91). New Orleans, Louisiana (April 27-May 2, 1991). New York: ACM Press, pp. 79-84.</p>
 
-		<p id="grossman">Grossman, T., Fitzmaurice, G., & Attar, R. (2009, April). A survey of software learnability: metrics, methodologies and guidelines. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (pp. 649-658). ACM.</p>
+		<p id="grossman">Grossman, T., Fitzmaurice, G., & Attar, R. (2009, April). <a href="https://doi.org/10.1145/1518701.1518803">A survey of software learnability: metrics, methodologies and guidelines</a>. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (pp. 649-658). ACM.</p>
 	
 		<p id="jacko">Jacko, J. A. (Ed.). (2012). Human computer interaction handbook: Fundamentals, evolving technologies, and emerging applications. CRC Press.</p>
 	
-		<p id="lewin">Lewin (1943, 118), as cited in Karl E. Weick, "Theory and practice in the real world." in: The Oxford Handbook of Organization Theory, Tsoukas et al. (eds.), Oxford University Press, 2003, p. 460; Also in Lewin, K. (1951). Field theory in social science: Selected theoretical papers (D. Cartwright, Ed.). New York, NY: Harper & Row</p>
+		<p id="lewin">Lewin (1943, 118), as cited in Karl E. Weick, <a href="https://doi.org/10.1093/oxfordhb/9780199275250.003.0017">"Theory and practice in the real world."</a> in: The Oxford Handbook of Organization Theory, Tsoukas et al. (eds.), Oxford University Press, 2003, p. 460; Also in Lewin, K. (1951). Field theory in social science: Selected theoretical papers (D. Cartwright, Ed.). New York, NY: Harper & Row</p>
 
 		<p id="norman">Norman, D. (2013). The design of everyday things: Revised and expanded edition. Basic Books (AZ).</p>
 				
-		<p id="rogers">Rogers, Y. (2012). HCI theory: classical, modern, and contemporary. Synthesis Lectures on Human-Centered Informatics, 5(2), 1-129.</p>
+		<p id="rogers">Rogers, Y. (2012). <a href="https://doi.org/10.2200/S00418ED1V01Y201205HCI014">HCI theory: classical, modern, and contemporary</a>. Synthesis Lectures on Human-Centered Informatics, 5(2), 1-129.</p>
 		
 	</body>
 	
