adding weiser's paper

--- a/history.html
+++ b/history.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Latest compiled and minified CSS -->
@@ -174,7 +174,9 @@
 		<p>Andries van Dam (1997). <a href="http://dx.doi.org/10.1145/253671.253708">Post-WIMP user interfaces</a>. Communications of the ACM 40, 2, 63-67.</p>
 		
 		<p id="sutherland">Ivan Sutherland (1963/2003). <a href="http://www.cl.cam.ac.uk/TechReports/UCAM-CL-TR-574.pdf">Sketchpad, A Man-Machine Graphical Communication System</a>. PhD Thesis at Massachusetts Institute of Technology, online version and editors' introduction by A.F. Blackwell & K. Rodden. Technical Report 574. Cambridge University Computer Laboratory.
-	
+		
+		<p>Mark Weiser (1991). <a href="https://doi.org/10.1145/329124.329126">The Computer for the 21st Century</a>. Scientific American 265, 3 (September 1991), 94-104.</p>
+
 	</body>
 	
 </html>
