A few formatting tweaks.

--- a/theory.html
+++ b/theory.html
@@ -160,11 +160,18 @@
 		<p>
 			To bridge gulfs of <em>evaluation</em>, a user interface needs to provide <strong>feedback</strong> that explains what effect the person's action had on the computer.
 			Some feedback is <em>explicit instruction</em> that essentially teaches the person what functional affordances exist, what their effects are, what their limitations are, how to invoke them in other ways, what new functional affordances are now available and where to find them, what to do if the effect of the action wasn't desired, and so on.
-			Clicking the "Add to cart" button, for example, should result in some message to the user that says, "I added this item to your cart.
+			Clicking the "Add to cart" button, for example, should result in some message to the user that says
+		</p>
+		
+		<blockquote>
+			"I added this item to your cart.
 			You can look at your cart over there.
 			If you didn't mean to add that to your cart, you can take it out like this.
 			If you're ready to buy everything in your cart, you can go here. Don't know what a cart is?
-			Read this." 
+			Read this."
+		</blockquote>
+		
+		<p>
 			Some feedback is <em>implicit instruction</em>, suggesting the effect of an action, but not explaining it explicitly.
 			For example, after pressing "Add to cart," there might be an icon showing an abstract icon of an item being added to a cart, with some kind of animation to capture the person's attention.
 			Whether implicit or explicit, all of this feedback is still contextual instruction on the specific effect of the user's input (and optionally more general instruction about other affordances in the user interface that will help a user accomplish their goal).
@@ -174,7 +181,7 @@
 			The result of all of this learning is a <strong>mental model</strong> (<a href="#carroll">Carroll and Anderson 1987</a>) in a person's head of what inputs are possible, what outputs those result in, and how all of those inputs and outputs are related to various goals that person might have.
 			However, because human learning is imperfect, and all of people, documentation, and contextual help provided to teach an interface is imperfect, people's mental models about user interfaces are nearly always imperfect.
 			People end up with brittle, fragile, and partially correct predictive models of what effect their actions in user interfaces will have, and this results in unintended effects and confusion.
-			If there's no one around to correct the person's mental model, or the user interface itself isn't a very good teacher, the person will fail to learn, and get confused and probably frustrated.
+			If there's no one around to correct the person's mental model, or the user interface itself isn't a very good teacher, the person will fail to learn, and get confused and probably frustrated (in the same way you might fumble to open a door with a confusing handle).
 			These episodes of user interface failure, which we can also describe as <strong>errors</strong> or <strong>breakdowns</strong>, are signs that a user's mental model is inconsistent with the actual behavior of some software system.
 			In HCI, we blame these breakdowns on designers rather than users, and so we try to maximize the learnability and minimize the error-proneness of user interface designs using usability evaluation methods.
 		</p>
@@ -207,7 +214,7 @@
 			Well, given that the world is <em>constantly</em> designing new user interfaces, and the HCI research community believes these ideas about user interfaces are fundamental to all user interfaces, not just the 2D graphical user interfaces we've lived with since 1960, every single time you design a user interface, you'll have to solve these problems.
 			Starting from this theoretical view of user interfaces allows you to ask the right questions.
 			For example, rather than trying to vaguely identify the most "intuitive" experience, you can systematically ask: "Exactly how will our software behave and how will our user interface effectively teach this behavior?"
-			Or, rather than relying on stereotypes, such as "older adults will struggle to learn to use computers," you can be more precise, saying, "This particular population of adults has not learned the design conventions of iOS, and so will need to learn those before successfully utilizing this application's interface".
+			Or, rather than relying on stereotypes, such as "older adults will struggle to learn to use computers," you can be more precise, saying, "This particular population of adults has not learned the design conventions of iOS, and so will need to learn those before successfully utilizing this application's interface."
 			Approaching user interface design and evaluation from this perspective will help you identify major gaps in your user interface design analytically and systematically, rather than relying only on observations of someone struggling to use an interface, or worse yet, stereotypes or ill-defined concepts such as "intuitive" or "user-friendly."
 		</p>
 		
