--- a/theory.html
+++ b/theory.html
@@ -129,12 +129,13 @@
 		
 		<p>
 			But <em>execution</em> is only half of the equation.
-			Norman also discussed <strong>gulfs of evaluation</strong>.
-			This is the idea that once a person has performed some action on a user interface via some functional affordance, the computer will take that input and do something with it.
-			Then what? 
-			How does the person know what the computer did?
-			How does the person know that the action resulted in progress toward the person's goal?
-			For a person to "cross" this gulf of evaluation, they must understand enough about how the user interface processed their action to comprehend the effects of their action, the new state of the computer, and the new space of affordances now available.
+			Norman also discussed <strong>gulfs of evaluation</strong>, which are the gaps between the output of a user interface and a users' goal.
+			Once a person has performed some action on a user interface via some functional affordance, the computer will take that input and do something with it.
+			It's up to the user to then map that feedback onto their goal.
+			If that mapping is simple and direct, the gulf is a small.
+			For example, consider an interface for printing a document.
+			If after pressing a print button, the feedback was "Your document was sent to the printer for printing," that would clearly convey progress toward the user's goal, minimizing the gulf between the output and the goal.
+			If after pressing the print button, the feedback was "Job 114 spooled," the gulf is larger, forcing the user to know what a "job" is, what "spooling" is, and what any of that has to do with printing their document.
 		</p>
 
 		<p>
