Draft of body-based interaction.

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 				<td>Chapter 11. <a href="body.html">Body-based input</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 12. <a href="static-visual-output.html">Static visual output</a></td>
+				<td>Chapter 12. <a href="static.html">Static visual output</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 13. <a href="dynamic-visual-output.html">Dynamic visual output</a></td>
+				<td>Chapter 13. <a href="dynamic.html">Dynamic visual output</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 14. <a href="physical-output.html">Physical output</a></td>
+				<td>Chapter 14. <a href="physical.html">Physical output</a></td>
 			</tr>
 			<tr>
 				<td>Chapter 15. <a href="help.html">Help</a></td>
