Adjusted titles of 2D and 3D output.

--- a/body.html
+++ b/body.html
@@ -150,7 +150,7 @@
 			Few of these techniques have been explored as ways to build real applications, and so we know little about the affordances and feedback necessary to help people successfully use them to work and play.
 		</p>
 
-		<center><p class="lead"><a href="static.html">Next chapter: Static visual output</a></p></center>
+		<center><p class="lead"><a href="2D.html">Next chapter: 2D visual output</a></p></center>
 
 		<h2>Further reading</h2>
 		
