--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<td>Chapter 11. <a href="body.html">Body-based input</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 12. <a href="static.html">Static output</a></td>
+				<td>Chapter 12. <a href="2D.html">2D visual output</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 13. <a href="dynamic.html">Dynamic output</a></td>
+				<td>Chapter 13. <a href="3D.html">3D visual output</a></td>
 			</tr>
 			<tr>
 				<td>Chapter 14. <a href="physical.html">Physical output</a></td>
