--- a/3D.html
+++ b/3D.html
@@ -15,7 +15,7 @@
 		
 		<link rel="stylesheet" href="style.css" />
 		
-		<title>Dynamic Output</title>
+		<title>3D Visual Output</title>
 		
 	</head>
 	<body>
@@ -25,7 +25,7 @@
 		<img src="images/hololens.jpg" class="img-responsive" alt="A screenshot of Microsoft's Hololens Minecraft experience" />
 		<small>Microsoft's HoloLens</small>
 		
-		<h1>Dynamic Output</h1>
+		<h1>3D Visual Output</h1>
 
 		<div class="lead">Andrew J. Ko</div>
 		
