Drafted an introduction.

--- a/2D.html
+++ b/2D.html
@@ -29,6 +29,24 @@
 
 		<div class="lead">Andrew J. Ko</div>
 
+		<p>It's easy to forget that computers didn't always have screens. The original format for computer output was actually printed, not rendered, and as with even modern printers, printing was slow. It wasn't until Ivan Sutherland integrated a CRT screen with a computer that screens enabled interactive, immediate feedback experiences.</p>
+		
+		<p>But screens alone were not enough. There was an entire set of new concepts that needed to be invented to make use of screens, ranging from graphics, typography, images, visualization, and animated versions of all of these media. And researchers continue to innovate in these spaces, including in screen technology itself. In this chapter, we'll review screen technology, and then discuss these media.</p>
+
+		<p>Screens</p>
+
+		* CRT, LCD, LED		
+        * Low-energy wireless, batteryless display <a href="https://doi.org/10.1145/2984511.2984513">Grosse-Puppendahl et al. 2016</a>
+        * Bendable 3D parallax display: <a href="https://doi.org/10.1145/2984511.2984524">Gotsch et al. 2016</a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/mGJe0AdszJg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        * A small near-eye display with input capabilities. (<a href="https://doi.org/10.1145/2642918.2647361">Lyons et al. 2014</a>)
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0-LZOil6UE8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        * Transparent displays with control to remove barriers while preserving privacy (<a href="https://doi.org/10.1145/2642918.2647350">Lindlbauer et al. 2014</a>)
+        * Moveable interactive displays with image projection (<a href="https://doi.org/10.1145/1095034.1095045">Lee et al. 2005</a>)
+        * Foldable interactive displays with image projection (<a href="https://doi.org/10.1145/1449715.1449763">Lee et al. 2008</a>)
+        * Multi-user handheld projector interaction <a href="https://doi.org/10.1145/1294211.1294220">Cao et al. 2007</a>	
+
+
 		<h2>Graphics</h2>
 
 Origin
@@ -71,8 +89,6 @@ HSV -- Hue, Saturation and Value (brightness) or HSL (Luminance)
 user oriented, intuitive appear of artist's hint, shade, tone 
 simple algorithm in text to convert, but not a linear mapping 
 Interpolating between colors can be done using different models, with different resulting intermediate colors
-
-		<h2>Images</h2>
 		
 		Pictures created externally
 “Bitmaps”, “Pixmaps”
@@ -131,6 +147,8 @@ Unicode: http://www.unicode.org
 All the world’s languages
 Java uses Unicode
 		
+		<h2>Images</h2>
+
 		<h2>Data</h2>
 		
 		Optional Protovis: A Graphical Toolkit for Visualization. Michael Bostock, Jeffrey Heer. IEEE TVCG 2009. pdf
@@ -138,17 +156,6 @@ Java uses Unicode
 		
 		
 
-		* Displays
-            * Low-energy wireless, batteryless display <a href="https://doi.org/10.1145/2984511.2984513">Grosse-Puppendahl et al. 2016</a>
-            * Bendable 3D parallax display: <a href="https://doi.org/10.1145/2984511.2984524">Gotsch et al. 2016</a>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/mGJe0AdszJg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            * A small near-eye display with input capabilities. (<a href="https://doi.org/10.1145/2642918.2647361">Lyons et al. 2014</a>)
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/0-LZOil6UE8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            * Transparent displays with control to remove barriers while preserving privacy (<a href="https://doi.org/10.1145/2642918.2647350">Lindlbauer et al. 2014</a>)
-            * Moveable interactive displays with image projection (<a href="https://doi.org/10.1145/1095034.1095045">Lee et al. 2005</a>)
-            * Foldable interactive displays with image projection (<a href="https://doi.org/10.1145/1449715.1449763">Lee et al. 2008</a>)
-            * Multi-user handheld projector interaction <a href="https://doi.org/10.1145/1294211.1294220">Cao et al. 2007</a>
-	
 
 	
 	
