--- a/hands.html
+++ b/hands.html
@@ -23,7 +23,7 @@
 		<p><a href="index.html">Back to table of contents</a></p>
 
 		<img src="images/human-hands.jpg" class="img-responsive" alt="Two human hands in the sun facing a blue sky" />
-		<small>Hands are a versatile tool for input. Credit: Luisfi (Own work) [CC BY-SA 3.0] via Wikimedia Commons</small>
+		<small>Hands are versatile tools for input. Credit: Luisfi (Own work) [CC BY-SA 3.0] via Wikimedia Commons</small>
 		
 		<h1>Hands</h1>
 		<div class="lead">Andrew J. Ko</div>
